--- a/index.htm
+++ b/index.htm
@@ -180,42 +180,42 @@
               </div>
             </div>
             <div class="row">
-                <!----fact item--->
+                <!----fact item
                 <div class="fact-item padd-15">
                     <i class="lni lni-thumbs-up"></i>
                     <div class="details">
                         <h3>198</h3>
                         <p>Project done</p>
                     </div>
-                </div>
-                <!----fact item--->
+                </div>--->
+                <!----fact item
                 <div class="fact-item padd-15">
                     <i class="lni lni-coffee-cup"></i>
                     <div class="details">
                         <h3>6798</h3>
                         <p>Cup of coffee</p>
                     </div>
-                </div>
-                <!----fact item--->
+                </div>--->
+                <!----fact item
                 <div class="fact-item padd-15">
                     <i class="lni lni-users"></i>
                     <div class="details">
                         <h3>428</h3>
                         <p>Satisfied clients</p>
                     </div>
-                </div>
+                </div>--->
                 <!----fact item--->
-                <div class="fact-item padd-15">
+                <!---<div class="fact-item padd-15">
                     <i class="lni lni-cup"></i>
                     <div class="details">
                         <h3>28</h3>
                         <p>Nominees winner</p>
                     </div>
-                </div>
+                </div>---->
             </div>
           </div>
         </div>
-      </section>\
+      </section>
       <!---Services--->
       <section class="services section">
         <div class="container">
